--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,4 @@ beautifulsoup4==4.11.1
 requests==2.27.1
 pandas==1.4.2
 numpy==1.22.3
-streamlit==1.10.0
-beautifulsoup4==4.11.1
-requests==2.27.1
-pandas==1.4.2
-numpy==1.22.3
+scikit-learn==1.0.2
